--- a/concessionaria-intelectah-desafio/Concessionaria.IoC/Concessionaria.IoC.csproj
+++ b/concessionaria-intelectah-desafio/Concessionaria.IoC/Concessionaria.IoC.csproj
@@ -1,14 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Concessionaria.Application\Concessionaria.Application.csproj" />
-    <ProjectReference Include="..\Concessionaria.IoC\Concessionaria.IoC.csproj" />
+    <ProjectReference Include="..\Concessionaria.Infrastructure\Concessionaria.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
