--- a/concessionaria-intelectah-desafio/Concessionaria.IoC/ConcessionariaApp.IoC.csproj
+++ b/concessionaria-intelectah-desafio/Concessionaria.IoC/ConcessionariaApp.IoC.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Concessionaria.Application\Concessionaria.Application.csproj" />
-    <ProjectReference Include="..\Concessionaria.Infrastructure\Concessionaria.Infrastructure.csproj" />
+    <ProjectReference Include="..\Concessionaria.Application\ConcessionariaApp.Application.csproj" />
+    <ProjectReference Include="..\Concessionaria.Infrastructure\ConcessionariaApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
